--- a/OilTempJan/OilTempJan/OilTempJan.csproj
+++ b/OilTempJan/OilTempJan/OilTempJan.csproj
@@ -49,10 +49,11 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+    <!--ForegroundFile="Resources\AppIcon\appiconfg.svg"-->
+		<MauiIcon Include="Resources\AppIcon\appicon.svg" Color="#000000" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\oiltemp.png" Color="#512BD4" BaseSize="240,240" />
+		<MauiSplashScreen Include="Resources\Splash\oiltemp.png" Color="#000000" BaseSize="240,240" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
